--- a/requirements_render.txt
+++ b/requirements_render.txt
@@ -1,5 +1,3 @@
 telethon>=1.40.0
-flask>=2.3.0
-asyncio-mqtt>=0.16.0
-aiofiles>=23.0.0
-python-dotenv>=1.0.0
+asyncio-throttle>=1.0.2
+python-dotenv>=0.19.0
